--- a/index.html
+++ b/index.html
@@ -327,7 +327,8 @@ body.playing .play-btn {
 
 <script src="https://www.youtube.com/iframe_api"></script>
 <script>
-const album = {
+/* ===== アルバム定義 ===== */
+const albums = {
   AlbumA: [
     { id:"HCoTcCMLRsM", title:"Q", artist:"REBEL" },
     { id:"p8iNb7sTNiY", title:"ロストワンの号哭", artist:"REBEL" }
@@ -337,12 +338,15 @@ const album = {
   ]
 };
 
+let currentAlbumKey = "AlbumA";
+let album = albums[currentAlbumKey];
 
 let player, index = 0;
 let playing = false, seeking = false;
 let rotationTimer = null;
 let cdMini = false;
 
+/* ===== DOM ===== */
 const cd = document.getElementById("cd");
 const playIcon = document.getElementById("playIcon");
 const pauseIcon = document.getElementById("pauseIcon");
@@ -352,6 +356,7 @@ const stage = document.querySelector(".stage");
 const titleLink = document.getElementById("titleLink");
 const albumSheet = document.getElementById("albumSheet");
 
+/* ===== アルバム一覧 ===== */
 function toggleAlbumSheet(){
   albumSheet.classList.toggle("open");
 }
@@ -359,12 +364,12 @@ function toggleAlbumSheet(){
 function renderAlbums(){
   albumSheet.innerHTML = "";
   Object.keys(albums).forEach(name=>{
-    const div=document.createElement("div");
-    div.className="album-item";
-    div.textContent=name;
-    div.onclick=()=>{
-      currentAlbum=name;
-      album=albums[name];
+    const div = document.createElement("div");
+    div.className = "album-item";
+    div.textContent = name;
+    div.onclick = () => {
+      currentAlbumKey = name;
+      album = albums[name];
       loadTrack(0);
       toggleAlbumSheet();
     };
@@ -372,6 +377,7 @@ function renderAlbums(){
   });
 }
 
+/* ===== YouTube ===== */
 function onYouTubeIframeAPIReady() {
   player = new YT.Player("player", {
     videoId: album[0].id,
@@ -383,6 +389,7 @@ function onYouTubeIframeAPIReady() {
 function onReady() {
   player.setVolume(0);
   renderList();
+  renderAlbums();
   updateInfo();
   loop();
 }
@@ -398,6 +405,7 @@ function onStateChange(e) {
   if (e.data === YT.PlayerState.ENDED) next();
 }
 
+/* ===== 再生 ===== */
 function toggle() { playing ? pause() : play(); }
 
 function play() {
@@ -418,7 +426,7 @@ function pause() {
   document.body.classList.remove("playing");
 }
 
-/* 回転 */
+/* ===== CD回転 ===== */
 function startRotation() {
   if (cd.style.animationPlayState === "running") return;
   cd.style.animationPlayState = "running";
@@ -430,14 +438,14 @@ function stopRotation() {
   clearTimeout(rotationTimer);
 }
 
-/* CDタップ */
+/* ===== CDタップ ===== */
 cd.onclick = () => {
   cdMini = !cdMini;
   cd.classList.toggle("mini", cdMini);
   stage.classList.toggle("cd-mini", cdMini);
 };
 
-/* シーク */
+/* ===== シーク ===== */
 seekbar.oninput = () => {
   seeking = true;
   seekbar.style.setProperty("--progress", seekbar.value + "%");
@@ -460,7 +468,7 @@ function loop() {
   requestAnimationFrame(loop);
 }
 
-/* 曲操作 */
+/* ===== 曲操作 ===== */
 function loadTrack(i) {
   index = i;
   stopRotation();
@@ -476,7 +484,7 @@ function loadTrack(i) {
 function next() { loadTrack((index + 1) % album.length); }
 function prev() { loadTrack((index - 1 + album.length) % album.length); }
 
-/* プレイリスト */
+/* ===== プレイリスト ===== */
 function renderList() {
   playlist.innerHTML = "<h3>アルバム</h3>";
   album.forEach((t, i) => {
@@ -492,6 +500,7 @@ function toggleList() {
   playlist.classList.toggle("open");
 }
 
+/* ===== 情報 ===== */
 function updateInfo() {
   title.textContent = album[index].title;
   artist.textContent = album[index].artist;
@@ -507,3 +516,4 @@ function format(sec) {
 
 </body>
 </html>
+
