--- a/index.html
+++ b/index.html
@@ -1,811 +1,69 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Now Playing</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>CDキーホルダー 再生ページ</title>
 
-<style>
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
-  background: #111;
-  color: #fff;
-}
+  <meta name="description" content="CDキーホルダーをスマートフォンにかざすと、収録楽曲を再生できます。" />
 
-/* ===== ヘッダー ===== */
-.header {
-  position: fixed;
-  top: 12px;
-  right: 16px;
-  z-index: 40;
-}
-.menu-btn {
-  font-size: 26px;
-  cursor: pointer;
-}
+  <style>
+    body {
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Noto Sans JP", sans-serif;
+      background: #111;
+      color: #f5f5f5;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
 
-/* ▼ アルバム切替ボタン（追加） */
-.album-btn {
-  position: fixed;
-  top: 14px;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 40;
-  cursor: pointer;
-  opacity: 0.7;
-}
-.album-btn:hover { opacity: 1; }
-.album-btn svg {
-  width: 22px;
-  height: 22px;
-  fill: #aaa;
-}
+    .container {
+      text-align: center;
+      padding: 24px;
+      max-width: 420px;
+    }
 
-/* ===== プレイリスト ===== */
-.playlist {
-  position: fixed;
-  top: 0;
-  right: -100%;
-  width: 260px;
-  height: 100%;
-  background: #181818;
-  padding: 20px;
-  transition: right 0.35s ease;
-  z-index: 35;
-}
-.playlist.open { right: 0; }
-.track {
-  padding: 10px;
-  border-radius: 6px;
-  cursor: pointer;
-}
-.track.active { background: #333; }
-.track span {
-  display: block;
-  font-size: 12px;
-  color: #aaa;
-}
+    h1 {
+      font-size: 1.4rem;
+      margin-bottom: 16px;
+      letter-spacing: 0.05em;
+    }
 
-/* ===== アルバム一覧（下から） ===== */
-.album-sheet {
-  position: fixed;
-  bottom: -100%;
-  left: 0;
-  width: 100%;
-  background: #181818;
-  border-radius: 14px 14px 0 0;
-  padding: 16px;
-  transition: bottom 0.35s ease;
-  z-index: 45;
-}
-.album-sheet.open { bottom: 0; }
-.album-item {
-  padding: 12px;
-  border-radius: 8px;
-  cursor: pointer;
-}
-.album-item:hover { background: #333; }
+    p {
+      font-size: 0.95rem;
+      line-height: 1.7;
+      opacity: 0.9;
+    }
 
-/* ===== メイン ===== */
-.container {
-  padding: 44px 15px 20px;
-  text-align: center;
-}
-
-.stage {
-  position: relative;
-  width: 300px;
-  height: 300px;
-  margin: 20px auto;
-}
-
-/* ===== 動画 ===== */
-.video {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 220px;
-  height: 124px;
-  transform: translate(-50%, -50%);
-  pointer-events: none;
-  z-index: 1;
-}
-.stage.cd-mini .video {
-  width: 360px;
-  height: 202px;
-}
-
-/* ===== CD ===== */
-.cd {
-  position: absolute;
-  inset: 0;
-  border-radius: 50%;
-  background: url("cd.jpeg") center/cover no-repeat;
-  animation: spin 10s linear infinite;
-  animation-play-state: paused;
-  cursor: pointer;
-  z-index: 5;
-  transition: all 0.45s ease;
-}
-.cd.mini {
-  width: 58px;
-  height: 58px;
-  top: -60px;
-  left: -30px;
-}
-
-@keyframes spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
-/* ===== 情報 ===== */
-.title {
-  font-size: 18px;
-  margin-top: 10px;
-}
-.artist {
-  font-size: 14px;
-  color: #aaa;
-}
-
-/* ▼ 曲名リンク用（追加・他未変更） */
-.title-link {
-  color: #fff;
-  text-decoration: none;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  opacity: 0.85;
-  position: relative;
-}
-.title-link:hover {
-  opacity: 1;
-}
-.youtube-icon {
-  width: 14px;
-  height: 14px;
-  opacity: 0.6;
-  position: absolute;
-  right: -20px;
-}
-
-/* ===== コントロール ===== */
-.controls {
-  margin-top: 18px;
-}
-
-.control-buttons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 22px;
-  margin-bottom: 10px;
-}
-
-.icon-btn,
-.play-btn {
-  background: none;
-  border: none;
-  padding: 0;
-  cursor: pointer;
-}
-
-.icon-btn svg {
-  width: 22px;
-  height: 22px;
-  fill: #aaa;
-  transition: fill 0.2s;
-}
-.icon-btn:hover svg {
-  fill: #fff;
-}
-
-/* 再生ボタン */
-.play-btn {
-  width: 56px;
-  height: 56px;
-  border-radius: 50%;
-  background: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-/* ===== 再生中の淡い照らし ===== */
-@keyframes glowCycle-rebel {
-  0% {
-    box-shadow:
-      0 0 12px rgba(255,255,255,0.65),
-      0 0 26px rgba(255,255,255,0.3);
-  }
-  20% {
-    box-shadow:
-      0 0 16px rgba(255,60,60,0.85),
-      0 0 36px rgba(255,60,60,0.45);
-  }
-  40% {
-    box-shadow:
-      0 0 14px rgba(80,160,255,0.85),
-      0 0 34px rgba(80,160,255,0.45);
-  }
-  60% {
-    box-shadow:
-      0 0 18px rgba(120,200,255,0.95),
-      0 0 46px rgba(120,200,255,0.55);
-  }
-  80% {
-    box-shadow:
-      0 0 16px rgba(200,100,255,0.85),
-      0 0 38px rgba(200,100,255,0.45);
-  }
-  100% {
-    box-shadow:
-      0 0 12px rgba(255,255,255,0.65),
-      0 0 26px rgba(255,255,255,0.3);
-  }
-}
-
-@keyframes glowCycle-forte {
-  0% {
-    box-shadow:
-      0 0 12px rgba(255,80,80,0.6),
-      0 0 26px rgba(255,80,80,0.3);
-  }
-  25% {
-    box-shadow:
-      0 0 16px rgba(255,60,60,0.85),
-      0 0 38px rgba(255,60,60,0.45);
-  }
-  50% {
-    box-shadow:
-      0 0 20px rgba(255,40,40,0.95),
-      0 0 48px rgba(255,40,40,0.55);
-  }
-  75% {
-    box-shadow:
-      0 0 16px rgba(255,60,60,0.85),
-      0 0 38px rgba(255,60,60,0.45);
-  }
-  100% {
-    box-shadow:
-      0 0 12px rgba(255,80,80,0.6),
-      0 0 26px rgba(255,80,80,0.3);
-  }
-}
-
-@keyframes glowCycle-aoru {
-  0% {
-    box-shadow:
-      0 0 12px rgba(120,200,255,0.65),
-      0 0 26px rgba(120,200,255,0.35);
-  }
-  25% {
-    box-shadow:
-      0 0 16px rgba(90,180,255,0.85),
-      0 0 40px rgba(90,180,255,0.5);
-  }
-  50% {
-    box-shadow:
-      0 0 20px rgba(160,220,255,0.95),
-      0 0 52px rgba(160,220,255,0.6);
-  }
-  75% {
-    box-shadow:
-      0 0 16px rgba(90,180,255,0.85),
-      0 0 40px rgba(90,180,255,0.5);
-  }
-  100% {
-    box-shadow:
-      0 0 12px rgba(120,200,255,0.65),
-      0 0 26px rgba(120,200,255,0.35);
-  }
-}
-
-@keyframes glowCycle-riwon {
-  0% {
-    box-shadow:
-      0 0 12px rgba(170,120,255,0.65),
-      0 0 26px rgba(170,120,255,0.35);
-  }
-  25% {
-    box-shadow:
-      0 0 16px rgba(150,90,255,0.85),
-      0 0 40px rgba(150,90,255,0.5);
-  }
-  50% {
-    box-shadow:
-      0 0 20px rgba(200,150,255,0.95),
-      0 0 52px rgba(200,150,255,0.6);
-  }
-  75% {
-    box-shadow:
-      0 0 16px rgba(150,90,255,0.85),
-      0 0 40px rgba(150,90,255,0.5);
-  }
-  100% {
-    box-shadow:
-      0 0 12px rgba(170,120,255,0.65),
-      0 0 26px rgba(170,120,255,0.35);
-  }
-}
-
-@keyframes glowCycle-xea {
-  0% {
-    box-shadow:
-      0 0 10px rgba(255,255,255,0.5),
-      0 0 22px rgba(255,255,255,0.25);
-  }
-  25% {
-    box-shadow:
-      0 0 14px rgba(255,255,255,0.7),
-      0 0 32px rgba(255,255,255,0.4);
-  }
-  50% {
-    box-shadow:
-      0 0 18px rgba(255,255,255,0.9),
-      0 0 44px rgba(255,255,255,0.55);
-  }
-  75% {
-    box-shadow:
-      0 0 14px rgba(255,255,255,0.7),
-      0 0 32px rgba(255,255,255,0.4);
-  }
-  100% {
-    box-shadow:
-      0 0 10px rgba(255,255,255,0.5),
-      0 0 22px rgba(255,255,255,0.25);
-  }
-}
-
-@keyframes glowCycle-shinoyu {
-  0% {
-    box-shadow:
-      0 0 12px rgba(140,230,255,0.65),
-      0 0 26px rgba(140,230,255,0.35);
-  }
-  25% {
-    box-shadow:
-      0 0 16px rgba(110,215,255,0.85),
-      0 0 40px rgba(110,215,255,0.5);
-  }
-  50% {
-    box-shadow:
-      0 0 20px rgba(180,245,255,0.95),
-      0 0 52px rgba(180,245,255,0.6);
-  }
-  75% {
-    box-shadow:
-      0 0 16px rgba(110,215,255,0.85),
-      0 0 40px rgba(110,215,255,0.5);
-  }
-  100% {
-    box-shadow:
-      0 0 12px rgba(140,230,255,0.65),
-      0 0 26px rgba(140,230,255,0.35);
-  }
-}
-
-@keyframes glowCycle-forxea {
-  0% {
-    box-shadow:
-      0 0 14px rgba(255,70,70,0.8),
-      0 0 36px rgba(255,70,70,0.45);
-  }
-  50% {
-    box-shadow:
-      0 0 18px rgba(255,255,255,0.9),
-      0 0 48px rgba(255,255,255,0.55);
-  }
-  100% {
-    box-shadow:
-      0 0 14px rgba(255,70,70,0.8),
-      0 0 36px rgba(255,70,70,0.45);
-  }
-}
-
-@keyframes glowCycle-idol {
-  0% {
-    box-shadow:
-      0 0 14px rgba(140,230,255,0.75),
-      0 0 34px rgba(140,230,255,0.4);
-  }
-  33% {
-    box-shadow:
-      0 0 18px rgba(100,180,255,0.9),
-      0 0 46px rgba(100,180,255,0.55);
-  }
-  66% {
-    box-shadow:
-      0 0 18px rgba(170,120,255,0.9),
-      0 0 48px rgba(170,120,255,0.55);
-  }
-  100% {
-    box-shadow:
-      0 0 14px rgba(140,230,255,0.75),
-      0 0 34px rgba(140,230,255,0.4);
-  }
-}
-
-body.playing.artist-rebel .play-btn {
-  animation: glowCycle-rebel 6s ease-in-out infinite;
-}
-
-body.playing.artist-forte .play-btn {
-  animation: glowCycle-forte 6s ease-in-out infinite;
-}
-
-body.playing.artist-aoru .play-btn {
-  animation: glowCycle-aoru 6s ease-in-out infinite;
-}
-
-body.playing.artist-xea .play-btn {
-  animation: glowCycle-xea 6s ease-in-out infinite;
-}
-
-body.playing.artist-shinoyu .play-btn {
-  animation: glowCycle-shinoyu 6s ease-in-out infinite;
-}
-
-body.playing.artist-riwon .play-btn {
-  animation: glowCycle-riwon 6s ease-in-out infinite;
-}
-
-body.playing.artist-forxea .play-btn {
-  animation: glowCycle-forxea 6s ease-in-out infinite;
-}
-
-body.playing.artist-idol .play-btn {
-  animation: glowCycle-idol 6s ease-in-out infinite;
-}
-
-  
-.play-btn svg {
-  width: 26px;
-  height: 26px;
-  fill: #000;
-}
-
-/* ===== シークバー ===== */
-.seekbar {
-  width: 100%;
-  -webkit-appearance: none;
-  appearance: none;
-  height: 4px;
-  border-radius: 2px;
-  background: linear-gradient(
-    to right,
-    #fff 0%,
-    #fff var(--progress, 0%),
-    #444 var(--progress, 0%),
-    #444 100%
-  );
-}
-.seekbar::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  width: 12px;
-  height: 12px;
-  background: #fff;
-  border-radius: 50%;
-  cursor: pointer;
-}
-
-/* 時間 */
-.time {
-  font-size: 12px;
-  color: #aaa;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 4px;
-}
-</style>
+    .note {
+      margin-top: 24px;
+      font-size: 0.8rem;
+      opacity: 0.6;
+    }
+  </style>
 </head>
 
 <body>
+  <div class="container">
+    <h1>CDキーホルダー 再生ページ</h1>
 
-<div class="header">
-  <div class="menu-btn" onclick="toggleList()">☰</div>
-</div>
+    <p>
+      このページは<br>
+      CDキーホルダーをスマートフォンにかざすことで<br>
+      収録された楽曲を再生するためのページです。
+    </p>
 
-<!-- アルバム切替ボタン -->
-<div class="album-btn" onclick="toggleAlbumSheet()">
-  <svg viewBox="0 0 24 24"><path d="M5 9h14v2H5zm0 4h14v2H5z"/></svg>
-</div>
+    <p>
+      NFC対応スマートフォンを<br>
+      キーホルダーに近づけてください。
+    </p>
 
-<!-- アルバム一覧 -->
-<div class="album-sheet" id="albumSheet"></div>
-  
-<div class="playlist" id="playlist"></div>
-
-<div class="container">
-  <div class="stage">
-    <div id="player" class="video"></div>
-    <div id="cd" class="cd"></div>
+    <p class="note">
+      ※ このページは案内用です。<br>
+      再生はキーホルダーから直接行われます。
+    </p>
   </div>
-
-  <!-- ▼ 曲名タップでYouTubeへ（ここだけ変更） -->
-  <div class="title">
-    <a id="titleLink" class="title-link" target="_blank" rel="noopener">
-      <span id="title"></span>
-      <svg class="youtube-icon" viewBox="0 0 24 24" fill="currentColor">
-        <path d="M23.5 6.2s-.2-1.6-.9-2.3c-.9-.9-1.9-.9-2.4-1C16.8 2.5 12 2.5 12 2.5s-4.8 0-8.2.4c-.5.1-1.5.1-2.4 1-.7.7-.9 2.3-.9 2.3S0 8 0 9.8v1.8c0 1.8.2 3.6.2 3.6s.2 1.6.9 2.3c.9.9 2.1.9 2.6 1 1.9.2 8.3.4 8.3.4s4.8 0 8.2-.4c.5-.1 1.5-.1 2.4-1 .7-.7.9-2.3.9-2.3s.2-1.8.2-3.6V9.8c0-1.8-.2-3.6-.2-3.6zM9.6 14.6V7.9l6.4 3.4-6.4 3.3z"/>
-      </svg>
-    </a>
-  </div>
-  <div class="artist" id="artist"></div>
-
-  <div class="controls">
-    <div class="control-buttons">
-      <button class="icon-btn" onclick="prev()">
-        <svg viewBox="0 0 24 24"><path d="M6 5v14M18 6l-8 6 8 6z"/></svg>
-      </button>
-
-      <button class="play-btn" onclick="toggle()">
-        <svg id="playIcon" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>
-        <svg id="pauseIcon" viewBox="0 0 24 24" style="display:none"><path d="M6 5h4v14H6zm8 0h4v14h-4z"/></svg>
-      </button>
-
-      <button class="icon-btn" onclick="next()">
-        <svg viewBox="0 0 24 24"><path d="M18 5v14M6 6l8 6-8 6z"/></svg>
-      </button>
-    </div>
-
-    <input type="range" id="seekbar" class="seekbar" min="0" max="100">
-    <div class="time">
-      <span id="current">0:00</span>
-      <span id="duration">0:00</span>
-    </div>
-  </div>
-</div>
-
-<script src="https://www.youtube.com/iframe_api"></script>
-<script>
-/* ===== アルバム定義 ===== */
-const albums = {
-  AlbumA: [
-    { id:"HCoTcCMLRsM", title:"Q", artist:"REBEL" },
-    { id:"p8iNb7sTNiY", title:"ロストワンの号哭", artist:"REBEL" }
-  ],
-  AlbumB: [
-    { id:"uC44M7_srjg", title:"DOGLAND", artist:"REBEL" },
-    { id:"xzWDxSVybT8", title:"愛のけだもの", artist:"ふぉるせあ" },
-    { id:"5q9zozZD2nA", title:"Snow halation", artist:"アイドル部" },
-    { id:"RqltfjkkJJk", title:"ホメオスタシス", artist:"ふぉるて" },
-    { id:"rAFw4j-rI-c", title:"IN_MY_HEAD", artist:"aoru" },
-    { id:"lhGiqShlmzo", title:"ヤミタイガール", artist:"xea" },
-    { id:"PcR7uUsNmuI", title:"from Y to Y", artist:"水篠 瀀" },
-    { id:"ZlTv_FDY8Cc", title:"キルマー", artist:"りをん" }
-  ]
-};
-
-let currentAlbumKey = "AlbumA";
-let album = albums[currentAlbumKey];
-
-let player, index = 0;
-let playing = false, seeking = false;
-let rotationTimer = null;
-let cdMini = false;
-
-/* ===== DOM ===== */
-const cd = document.getElementById("cd");
-const playIcon = document.getElementById("playIcon");
-const pauseIcon = document.getElementById("pauseIcon");
-const seekbar = document.getElementById("seekbar");
-const playlist = document.getElementById("playlist");
-const stage = document.querySelector(".stage");
-const titleLink = document.getElementById("titleLink");
-const albumSheet = document.getElementById("albumSheet");
-
-const title = document.getElementById("title");
-const artist = document.getElementById("artist");
-const current = document.getElementById("current");
-const duration = document.getElementById("duration");
-  
-/* ===== アルバム一覧 ===== */
-function toggleAlbumSheet(){
-  albumSheet.classList.toggle("open");
-}
-
-function renderAlbums(){
-  albumSheet.innerHTML = "";
-  Object.keys(albums).forEach(name=>{
-    const div = document.createElement("div");
-    div.className = "album-item";
-    div.textContent = name;
-    div.onclick = () => {
-      currentAlbumKey = name;
-      album = albums[name];
-      loadTrack(0);
-      toggleAlbumSheet();
-    };
-    albumSheet.appendChild(div);
-  });
-}
-
-/* ===== YouTube ===== */
-function onYouTubeIframeAPIReady() {
-  player = new YT.Player("player", {
-    videoId: album[0].id,
-    playerVars: { playsinline: 1, controls: 0 },
-    events: { onReady, onStateChange }
-  });
-}
-
-function onReady() {
-  player.setVolume(0);
-  renderList();
-  renderAlbums();
-  updateInfo();
-  loop();
-}
-
-function onStateChange(e) {
-  if (e.data === YT.PlayerState.PLAYING) {
-    startRotation();
-    playing = true;
-    playIcon.style.display = "none";
-    pauseIcon.style.display = "block";
-    document.body.classList.add("playing");
-  }
-  if (e.data === YT.PlayerState.ENDED) next();
-}
-
-/* ===== 再生 ===== */
-function toggle() { playing ? pause() : play(); }
-
-function play() {
-  player.playVideo();
-  playing = true;
-  playIcon.style.display = "none";
-  pauseIcon.style.display = "block";
-  document.body.classList.add("playing");
-}
-
-function pause() {
-  player.pauseVideo();
-  stopRotation();
-  player.setVolume(0);
-  playing = false;
-  playIcon.style.display = "block";
-  pauseIcon.style.display = "none";
-  document.body.classList.remove("playing");
-}
-
-/* ===== CD回転 ===== */
-function startRotation() {
-  if (cd.style.animationPlayState === "running") return;
-  cd.style.animationPlayState = "running";
-  clearTimeout(rotationTimer);
-  rotationTimer = setTimeout(() => player.setVolume(100), 300);
-}
-function stopRotation() {
-  cd.style.animationPlayState = "paused";
-  clearTimeout(rotationTimer);
-}
-
-/* ===== CDタップ ===== */
-cd.onclick = () => {
-  cdMini = !cdMini;
-  cd.classList.toggle("mini", cdMini);
-  stage.classList.toggle("cd-mini", cdMini);
-};
-
-/* ===== シーク ===== */
-seekbar.oninput = () => {
-  seeking = true;
-  seekbar.style.setProperty("--progress", seekbar.value + "%");
-};
-seekbar.onchange = () => {
-  player.seekTo((seekbar.value / 100) * player.getDuration(), true);
-  seeking = false;
-};
-
-function loop() {
-  if (player && player.getCurrentTime && !seeking) {
-    const cur = player.getCurrentTime();
-    const dur = player.getDuration();
-    const percent = (cur / dur) * 100;
-    seekbar.value = percent;
-    seekbar.style.setProperty("--progress", percent + "%");
-    current.textContent = format(cur);
-    duration.textContent = format(dur);
-  }
-  requestAnimationFrame(loop);
-}
-
-/* ===== 曲操作 ===== */
-function loadTrack(i) {
-  index = i;
-  stopRotation();
-  player.setVolume(0);
-  player.loadVideoById(album[index].id);
-  updateInfo();
-  renderList();
-  playing = false;
-  playIcon.style.display = "block";
-  pauseIcon.style.display = "none";
-  document.body.classList.remove("playing");
-}
-function next() { loadTrack((index + 1) % album.length); }
-function prev() { loadTrack((index - 1 + album.length) % album.length); }
-
-/* ===== プレイリスト ===== */
-function renderList() {
-  playlist.innerHTML = "<h3>アルバム</h3>";
-  album.forEach((t, i) => {
-    const div = document.createElement("div");
-    div.className = "track" + (i === index ? " active" : "");
-    div.innerHTML = `${t.title}<span>${t.artist}</span>`;
-    div.onclick = () => { loadTrack(i); toggleList(); };
-    playlist.appendChild(div);
-  });
-}
-
-function toggleList() {
-  playlist.classList.toggle("open");
-}
-
-/* ===== 情報 ===== */
-function updateInfo() {
-  title.textContent = album[index].title;
-  artist.textContent = album[index].artist;
-  titleLink.href = "https://www.youtube.com/watch?v=" + album[index].id;
-}
-
-function format(sec) {
-  const m = Math.floor(sec / 60);
-  const s = Math.floor(sec % 60).toString().padStart(2, "0");
-  return `${m}:${s}`;
-}
-
-const artistThemes = {
-  "REBEL": { className: "artist-rebel" },
-  "aoru": { className: "artist-aoru" },
-  "xea": { className: "artist-xea" },
-  "ふぉるて": { className: "artist-forte" },
-  "水篠 瀀": { className: "artist-shinoyu" },
-  "りをん": { className: "artist-riwon" },
-  "アイドル部": { className: "artist-idol" },
-  "ふぉるせあ": { className: "artist-forxea" },
-  DEFAULT: { className: "artist-default" }
-};
-
-function applyArtistTheme(artist) {
-  const key = artist.trim();
-  const theme = artistThemes[key] || artistThemes.DEFAULT;
-
-  document.body.classList.remove(
-    ...Object.values(artistThemes).map(t => t.className)
-  );
-  document.body.classList.add(theme.className);
-}
-
-function updateInfo() {
-  const track = album[index];
-
-  title.textContent = track.title;
-  artist.textContent = track.artist;
-  titleLink.href = "https://www.youtube.com/watch?v=" + track.id;
-
-  applyArtistTheme(track.artist);
-}
-
-function applyArtistTheme(artistName) {
-  // 既存テーマを全削除
-  Object.values(artistThemes).forEach(t => {
-    document.body.classList.remove(t.className);
-  });
-
-  // 該当アーティスト or DEFAULT
-  const theme = artistThemes[artistName] || artistThemes.DEFAULT;
-  document.body.classList.add(theme.className);
-}
-
-</script>
-
 </body>
 </html>
-
-
-
