--- a/play/kNDttKex/index.html
+++ b/play/kNDttKex/index.html
@@ -121,7 +121,7 @@ body {
   position: absolute;
   inset: 0;
   border-radius: 50%;
-  background: url("cd.jpeg") center/cover no-repeat;
+  background: url("cd.jpg") center/cover no-repeat;
   animation: spin 10s linear infinite;
   animation-play-state: paused;
   cursor: pointer;
