アルバム追加

--- a/play/zFXPzKkT/index.html
+++ b/play/zFXPzKkT/index.html
@@ -576,7 +576,11 @@ const albums = {
     { id:"lhGiqShlmzo", title:"ヤミタイガール", artist:"xea" },
     { id:"PcR7uUsNmuI", title:"from Y to Y", artist:"水篠 瀀" },
     { id:"ZlTv_FDY8Cc", title:"キルマー", artist:"りをん" }
-  ]
+  ],
+  aoru: [
+  { id:"qZ-pTHuUFQQ", title:"初体験", artist:"aoru" },
+  { id:"ATFrhDgPCZ0", title:"Wolf!?。", artist:"aoru" }
+]
 };
 
 let currentAlbumKey = "AlbumA";
