--- a/youtube-playlist-tool/index.html
+++ b/youtube-playlist-tool/index.html
@@ -45,6 +45,17 @@ textarea {
 <input id="playlistInput" placeholder="再生リストURL または ID" />
 <button onclick="loadPlaylist()">動画ID取得</button>
 
+<label style="display:block;margin:10px 0;">
+  <input type="checkbox" id="bulkArtistToggle" />
+  artistを一括入力する
+</label>
+
+<input
+  id="bulkArtistInput"
+  placeholder="一括で設定する artist"
+  disabled
+/>
+
 <div id="videoList"></div>
 
 <button onclick="generateCode()">JSコード生成</button>
@@ -65,19 +76,41 @@ async function loadPlaylist() {
     document.getElementById("playlistInput").value
   );
 
-  const url = `https://www.googleapis.com/youtube/v3/playlistItems?part=contentDetails&playlistId=${playlistId}&maxResults=50&key=${API_KEY}`;
-  const res = await fetch(url);
-  const data = await res.json();
-
   const list = document.getElementById("videoList");
+  list.innerHTML = "読み込み中…";
+
+  let allItems = [];
+  let pageToken = "";
+
+  // 🔁 全ページ取得（順番はAPIが保証）
+  while (true) {
+    const url =
+      `https://www.googleapis.com/youtube/v3/playlistItems` +
+      `?part=contentDetails` +
+      `&playlistId=${playlistId}` +
+      `&maxResults=50` +
+      `&pageToken=${pageToken}` +
+      `&key=${API_KEY}`;
+
+    const res = await fetch(url);
+    const data = await res.json();
+
+    allItems = allItems.concat(data.items);
+
+    if (!data.nextPageToken) break;
+    pageToken = data.nextPageToken;
+  }
+
   list.innerHTML = "";
 
-  data.items.forEach(item => {
+  // 👉 取得順 = 再生リスト順
+  allItems.forEach((item, index) => {
     const videoId = item.contentDetails.videoId;
+
     const div = document.createElement("div");
     div.className = "video-row";
     div.innerHTML = `
-      <div>id: <b>${videoId}</b></div>
+      <div>${index + 1}. id: <b>${videoId}</b></div>
       <input placeholder="title" />
       <input placeholder="artist" />
     `;
@@ -105,6 +138,34 @@ ${lines.join(",\n")}
 
   document.getElementById("output").value = result;
 }
+
+const bulkToggle = document.getElementById("bulkArtistToggle");
+const bulkInput  = document.getElementById("bulkArtistInput");
+
+// トグルON/OFF
+bulkToggle.addEventListener("change", () => {
+  bulkInput.disabled = !bulkToggle.checked;
+
+  if (bulkToggle.checked) {
+    applyBulkArtist();
+  }
+});
+
+// 一括入力欄が変更されたら即反映
+bulkInput.addEventListener("input", applyBulkArtist);
+
+function applyBulkArtist() {
+  if (!bulkToggle.checked) return;
+
+  const rows = document.querySelectorAll(".video-row");
+  rows.forEach(row => {
+    const artistInput = row.querySelectorAll("input")[1];
+    if (!artistInput.value) {
+      artistInput.value = bulkInput.value;
+    }
+  });
+}
+
 </script>
 
 </body>
