--- a/play/NAAPGSKk/index.html
+++ b/play/NAAPGSKk/index.html
@@ -581,16 +581,13 @@ const albums = {
     { id:"PcR7uUsNmuI", title:"from Y to Y", artist:"水篠 瀀" },
     { id:"ZlTv_FDY8Cc", title:"キルマー", artist:"りをん" }
   ],
-  マイベスト: [
-  { id:"eYmfhFoXz68", title:"ブリキノダンス", artist:"aoru", platform:"youtube" },
-  { id:"7FELw11Zsek", title:"SOS", artist:"aoru", platform:"youtube" },
-  { id:"UQACzbW-X0M", title:"UNDEAD", artist:"aoru", platform:"youtube" },
-  { id:"MDWVOoMWikU", title:"青", artist:"aoru", platform:"youtube" },
-  { id:"JLuP-iWAaPk", title:"ピタゴラス・ウィッチ", artist:"aoru", platform:"youtube" },
-  { id:"9ank6RL50dA", title:"花に風", artist:"aoru", platform:"youtube" },
-  { id:"Grcty3UZZbU", title:"リコレクションエンドロウル", artist:"aoru", platform:"youtube" },
-  { id:"sm42112160", title:"ワールズエンド・ダンスホール", artist:"aoru", platform:"nicovideo" }
-  ]
+  ちゅん。セレクト: [
+  { id:"LJB0wfeuFOo", title:"偽物人間40号", artist:"ふぉるて", platform:"youtube" },
+  { id:"TMiFoNqcQ3E", title:"ヴァニタス", artist:"ふぉるて", platform:"youtube" },
+  { id:"Lgvy6o-Vln0", title:"ヴァンパイア", artist:"ふぉるて", platform:"youtube" },
+  { id:"5TgnU8GZY_4", title:"ダーリンダンス", artist:"ふぉるて", platform:"youtube" },
+  { id:"1YEozle62zQ", title:"コールボーイ", artist:"ふぉるて", platform:"youtube" }
+]
 };
 
 let currentAlbumKey = "AlbumA";
@@ -867,5 +864,4 @@ function applyArtistTheme(artistName) {
 
 </body>
 </html>
-
 
