--- a/play/NAAPGSKk/index.html
+++ b/play/NAAPGSKk/index.html
@@ -581,7 +581,7 @@ const albums = {
     { id:"PcR7uUsNmuI", title:"from Y to Y", artist:"水篠 瀀" },
     { id:"ZlTv_FDY8Cc", title:"キルマー", artist:"りをん" }
   ],
-  マイベスト: [
+  璞セレクト: [
   { id:"eYmfhFoXz68", title:"ブリキノダンス", artist:"aoru", platform:"youtube" },
   { id:"7FELw11Zsek", title:"SOS", artist:"aoru", platform:"youtube" },
   { id:"UQACzbW-X0M", title:"UNDEAD", artist:"aoru", platform:"youtube" },
