--- a/play/kNDttKex/index.html
+++ b/play/kNDttKex/index.html
@@ -581,7 +581,7 @@ const albums = {
     { id:"PcR7uUsNmuI", title:"from Y to Y", artist:"水篠 瀀" },
     { id:"ZlTv_FDY8Cc", title:"キルマー", artist:"りをん" }
   ],
-  ちゅん。セレクト: [
+  ちゅんセレクト: [
   { id:"LJB0wfeuFOo", title:"偽物人間40号", artist:"ふぉるて", platform:"youtube" },
   { id:"TMiFoNqcQ3E", title:"ヴァニタス", artist:"ふぉるて", platform:"youtube" },
   { id:"Lgvy6o-Vln0", title:"ヴァンパイア", artist:"ふぉるて", platform:"youtube" },
